feat: add integration with Compliance API for document validation
- Implemented ComplianceAuthService and ComplianceValidationService
- Configured Refit clients and authentication via user-secrets
- Created integration tests for token retrieval and document validation
- Applied error handling for failed API responses

--- a/CubosFinance.Api/CubosFinance.Api.csproj
+++ b/CubosFinance.Api/CubosFinance.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>96e455b7-46c1-42c3-8f42-6d6e2b19d64f</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
