--- a/CubosFinance.Api/appsettings.Development.json
+++ b/CubosFinance.Api/appsettings.Development.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "Default": "Host=localhost;Port=5432;Database=cubos_db;Username=postgres;Password=postgres"
   },
+  "ComplianceAuth": {
+    "Email": "seu@email.com",
+    "Password": "suaSenha",
+    "BaseUrl": "https://compliance-api.cubos.io/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
