--- a/CubosFinance.Application/CubosFinance.Application.csproj
+++ b/CubosFinance.Application/CubosFinance.Application.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="8.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
