--- a/CubosFinance.Tests/CubosFinance.Tests.csproj
+++ b/CubosFinance.Tests/CubosFinance.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,6 +7,7 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <UserSecretsId>4a227b77-328d-480b-b045-09dde9b3c5dc</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
