feat: add login endpoint and JWT authentication

--- a/CubosFinance.Api/appsettings.Development.json
+++ b/CubosFinance.Api/appsettings.Development.json
@@ -7,6 +7,12 @@
     "Password": "suaSenha",
     "BaseUrl": "https://compliance-api.cubos.io/"
   },
+  "Jwt": {
+    "Key": "minhachavedesegurancaprecisaterumtamanhominimo",
+    "Issuer": "ApiFinance",
+    "Audience": "ApiFinanceUsers",
+    "ExpiresInMinutes": 30
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
