test: adiciona testes unitários para Account, Card e TransactionService

--- a/CubosFinance.Tests/CubosFinance.Tests.csproj
+++ b/CubosFinance.Tests/CubosFinance.Tests.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\CubosFinance.Api\CubosFinance.Api.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
